# Loja-de-aluguel-de-roupas

./: .dockerignore  .gitignore  Desinstalar-Loja.sh  Dockerfile  Dockerfile.backup  MANUAL.md  README.md  Requisitos.md  anotações.md  build-app.sh  criar-pacote.sh  docker-compose.yml  docker-entrypoint.sh  electron.js  index.html  install.sh  jest.config.js  jest.setup.js  loja-roupas_1.0.3_all.deb  loja-roupas_1.0.4_all.deb  package-lock.json  package.json  scripts.txt  tailwind.config.js  tsconfig.json  webpack.config.js
PacoteLoja/: Dockerfile  INSTALAR.sh  INSTRUCOES.txt  LEIA-ME.txt  docker-compose-fix.yml  docker-compose.yml
PacoteLoja/data/: loja.db
backend/: db.js  db.js.backup  package-lock.json  package.json  server.js
backend/controllers/: aluguelController.js  clienteController.js  pagamentoController.js  produtoController.js  roupaController.js
backend/database/: databaseCode.txt  loja.db  setup.sql
backend/routes/: alugueis.js  alugueisRoutes.js  clientes.js  clientesRoutes.js  pagamentosRoutes.js  produtosRoutes.js  roupas.js  roupasRoutes.js
backend/src/: app.ts  server.ts
backend/utils/: backup.js
debian/: changelog  control  postinst  prerm
frontend/: package-lock.json
frontend/src/: App.tsx
instaladores/: criar-deb.sh  instalar-gui.sh
public/: bundle.js  index.html  output.css
src/: App-simple.jsx  App.jsx  api.js  index.css  index.html  index.js
src-tauri/: Cargo.toml  add-nodejs-dep.sh  before-build.sh  tauri.conf.json
src-tauri/src/: alugueis.rs  clientes.rs  db.rs  lib.rs  pagamentos.rs  produtos.rs
(+27 files in other folders)
